20 Mar 2006; Roy Marples <uberlord@gentoo.org>

   Accepted a patch from Beech Horn that fixed some issues when compiling
   with the pedantic flag.

** dhcpcd-2.0.3 Released

10 Mar 2006; Simon Kelley <simon@thekelleys.org.uk>

    Fixed problems with previous changes to avoid buffer-fillage.
    There were two problems: one with not checking for non-existance of
    the UDP socket, and a second, a race between select() and sigalarm.
    
** dhcpcd-2.0.2 Released

24 Feb 2006; Roy Marples <uberlord@gentoo.org>

    When a RFC violating space seperated domain name hits treat it like
    a search path, RFC 3397 so we don't break too many clients.

24 Feb 2006; Simon Kelley <simon@thekelleys.org.uk>
    
   Fixed file descriptor leak. Previously, the raw and UDP sockets were
   inherited by the dhcpcd.exe script and its children. If the children
   changed uid away from route, they would inherit otherwise unavailable
   rights to access these sockets.

   Replaced sleep() call with calls the select(). The UDP and Raw sockets
   are open at this time, so if they are no serviced, they accumulate
   large numbers of kernel-buffered packets, wasting unpageable
   memory. The new code wake dhcpcd so it can discard any recieved data.
	
** dhcpcd-2.0.1 Released

21 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed gcc-4 complile warnings
    Fixed -L ConfigDir option

** dhcpcd-2.0.0 Released

21 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Applied Debian patchset 22 and tagged it
    Applied Gentoo patchset 12 and tagged it
    Trimmed crud files (dhcpcd binary, spec files, lsm files, etc )
    Moved source, dhcpcd.exe and dhcpcd.8 to src subdir
    Updated Makefile.am and configure.in for newer autotools
    Updated the manpage
    Now use ./configure --enable-debug, --enable-arp, --enable-embed
    as we no longer ship a default Makefile
    .sv files are now only created when the target is not a symbolic link
