@@ -26,6 +26,7 @@
 #include <sys/socket.h>
 #include <sys/ioctl.h>
 #include <sys/stat.h>
+#include <sys/wait.h>
 #include <netinet/in.h>
 #include <net/route.h>
 #include <net/if.h>
@@ -253,7 +254,7 @@ int islink(char *file) {
 int dhcpConfig()
 {
   int i;
-  FILE *f;
+  FILE *f = NULL;
   char hostinfo_file_old[128];
   struct ifreq		ifr;
   struct rtentry	rtent;
@@ -391,18 +392,62 @@ int dhcpConfig()
     {
       if ( ! islink(resolv_file))
 	resolv_renamed=1+rename(resolv_file, resolv_file_sv);
-      f=fopen(resolv_file, "w");
-      if ( f )
+
+      struct stat buf;
+      int resolvconf = 0;
+      int pfd[2];
+      int resolvpid = 0;
+      if ( ! stat("/sbin/resolvconf", &buf) ) {
+        resolvconf = 1;
+	if ( pipe(pfd) < 0 ) {
+	  syslog(LOG_ERR,"dhcpConfig: pipe: %s", strerror(errno));
+	  return 1;
+	}
+	int sd = open("/dev/null", O_RDWR);
+#ifdef EMBED
+        if ( (resolvpid = vfork()) == 0 )
+#else
+        if ( (resolvpid = fork()) == 0 )
+#endif
+        {
+	    close(dhcpSocket);
+	    if (udpFooSocket != -1)
+		close(udpFooSocket);
+	    close(pfd[1]);
+	    if ( pfd[0] != STDIN_FILENO) {
+		dup2(pfd[0], STDIN_FILENO);
+		close(pfd[0]);
+	    }
+	    if ( sd ) {
+		dup2(sd, STDOUT_FILENO);
+		close(sd);
+	    }
+	    char *arg[3];
+	    arg[0] = "/sbin/resolvconf";
+	    arg[1] = "-a";
+	    arg[2] = IfName;
+	    arg[3] = NULL;
+	    if ( execv(arg[0], arg) && errno != ENOENT )
+		syslog(LOG_ERR,"dhcpConfig: error executing \"%s %s %s\": %s\n",
+			arg[0],arg[1],arg[2],strerror(errno));
+	    exit(1);
+	}
+	f=fdopen(pfd[1],"w");
+        if ( !f )
+            syslog(LOG_ERR,"dhcpConfig: fdopen: %s\n", strerror(errno));
+      } else {
+        f=fopen(resolv_file, "w");
+        if ( !f )
+            syslog(LOG_ERR,"dhcpConfig: fopen: %s\n", strerror(errno));
+      }
+      if ( f ) 
 	{
 	  int i;
 	  fprintf(f, "# Generated by dhcpcd for interface %s\n", IfName);
 	  if ( DhcpOptions.len[dnsSearchPath] )
 	    fprintf(f,"search %s\n", (char *)DhcpOptions.val[dnsSearchPath]);
 	  else if ( DhcpOptions.len[domainName] ) {
-		if ( strchr( (char *)DhcpOptions.val[domainName], ' ') )
-		    fprintf(f,"search %s\n",(char *)DhcpOptions.val[domainName]);
-		else
-		    fprintf(f,"domain %s\n",(char *)DhcpOptions.val[domainName]);
+	    fprintf(f,"search %s\n",(char *)DhcpOptions.val[domainName]);
 	  }
 	  
 	  for (i=0;i<DhcpOptions.len[dns];i+=4)
@@ -411,11 +456,11 @@ int dhcpConfig()
 	    ((unsigned char *)DhcpOptions.val[dns])[i+1],
 	    ((unsigned char *)DhcpOptions.val[dns])[i+2],
 	    ((unsigned char *)DhcpOptions.val[dns])[i+3]);
-	  
+	
 	  fclose(f);
 	}
-      else
-	syslog(LOG_ERR,"dhcpConfig: fopen: %s\n",strerror(errno));
+      if ( resolvpid )
+	  waitpid(resolvpid, NULL, 0);
 
    /* moved the next section of code from before to after we've created
     * resolv.conf. See below for explanation. <poeml@suse.de>
